UI fixes on mobile

--- a/Assets/css/main.scss
+++ b/Assets/css/main.scss
@@ -788,4 +788,7 @@ section {
             }
         }
     }
+    .rating > label {
+        margin-right: 18px;
+    }
 }
